--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,34 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="0dp"
+        android:layout_marginTop="10dp">
 
-        <ImageView
-            android:id="@+id/travel_photo"
-            android:scaleType="centerCrop"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
-            android:layout_height="250dp"
-            android:layout_gravity="center"
-            android:src="@drawable/italy" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/travel_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|bottom"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="20dp"
-            android:text="Italy"
-            android:textColor="#FFC107"
-            android:textSize="30dp" />
-    </FrameLayout>
+            <ImageView
+                android:id="@+id/travel_photo"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:background="@drawable/imagebackground"
+                android:scaleType="centerCrop"
+                android:src="@drawable/italy" />
 
+            <TextView
+                android:id="@+id/travel_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|bottom"
+                android:layout_marginLeft="20dp"
+                android:layout_marginBottom="20dp"
+                android:text="Italy"
+                android:textColor="#FFC107"
+                android:textSize="30dp" />
+        </FrameLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
