--- a/Front/app/src/main/res/layout/activity_my_page.xml
+++ b/Front/app/src/main/res/layout/activity_my_page.xml
@@ -4,23 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyPage"
     android:background="#BF050F42"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MyPage">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:cardCornerRadius="80dp"
+        app:cardElevation="0dp">
+
+        <ImageView
+            android:id="@+id/profile_photo"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/person"
+            android:adjustViewBounds="true"
+            />
+    </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/image_upload_button"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/radius"
+        android:text="이미지 업로드" />
 
     <TextView
         android:id="@+id/user_email"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:gravity="center"
         android:text="안녕하세요"
-        android:textSize="30dp"
-        android:gravity="center"/>
+        android:textSize="30dp" />
+
     <TextView
         android:id="@+id/user_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:gravity="center"
         android:text="안녕하세요"
-        android:textSize="30dp"
-        android:gravity="center"/>
+        android:textSize="30dp" />
 
 </LinearLayout>
