--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -20,6 +20,7 @@
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:src="@drawable/person"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             />
     </androidx.cardview.widget.CardView>
