--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -9,9 +9,9 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         app:cardCornerRadius="15dp"
-        app:cardElevation="0dp"
-        android:layout_marginTop="10dp">
+        app:cardElevation="0dp">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -31,11 +31,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|bottom"
-                android:layout_marginLeft="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="40dp"
                 android:text="Italy"
                 android:textColor="#FFC107"
                 android:textSize="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="166dp"
+                android:background="#ffffff"
+                android:text="실내촬영/파리"
+                android:textSize="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="#ffffff"
+                android:text="[Studio Le Gray]파리 스냅 30분-추가 보정 이벤트"
+                android:textSize="15dp" />
         </FrameLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
