--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainPage"
-    android:weightSum="12">
+    android:weightSum="12"
+    android:background="#BF050F42">
 
     <LinearLayout
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#BF050F42"
+
         android:orientation="horizontal">
 
         <ImageView
@@ -29,7 +30,7 @@
             android:text="모여봐요 여행의 숲"
             android:textColor="#FFC107"
             android:textSize="30dp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/recoche"/>
 
         <ImageView
             android:id="@+id/person"
@@ -41,10 +42,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="4"
+        android:layout_weight="3.5"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#BF050F42">
+        >
 
         <ImageView
             android:layout_width="200dp"
@@ -55,63 +56,65 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="6"
+        android:layout_weight="6.5"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical">
-        <com.google.android.material.appbar.AppBarLayout
+        <!--        <com.google.android.material.appbar.AppBarLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:background="#BF050F42">-->
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#BF050F42">
+            app:tabBackground="@drawable/radius"
+            app:tabMinWidth="50dp"
+            app:tabIndicatorColor="#FFC107"
+            app:tabIndicatorFullWidth="false"
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabBackground="@drawable/radius"
-                app:tabMinWidth="50dp"
-                app:tabIndicatorColor="#FFC107"
-                app:tabIndicatorFullWidth="false"
-                />
+            />
 
-        </com.google.android.material.appbar.AppBarLayout>
+        <!--        </com.google.android.material.appbar.AppBarLayout>-->
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-<!--        <Button-->
-<!--            android:layout_width="100dp"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:layout_marginLeft="15dp"-->
-<!--            android:background="@drawable/radius"-->
-<!--            android:gravity="center"-->
-<!--            android:text="패키지" />-->
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"/>
+        <!--        <Button-->
+        <!--            android:layout_width="100dp"-->
+        <!--            android:layout_height="30dp"-->
+        <!--            android:layout_marginLeft="15dp"-->
+        <!--            android:background="@drawable/radius"-->
+        <!--            android:gravity="center"-->
+        <!--            android:text="패키지" />-->
 
-<!--        <Button-->
-<!--            android:layout_width="100dp"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:layout_marginLeft="40dp"-->
-<!--            android:layout_marginRight="40dp"-->
-<!--            android:background="@drawable/radius"-->
-<!--            android:gravity="center"-->
-<!--            android:text="국내" />-->
-<!--        <Button-->
-<!--            android:layout_width="100dp"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:layout_marginRight="15dp"-->
-<!--            android:background="@drawable/radius"-->
-<!--            android:gravity="center"-->
-<!--            android:text="해외" />-->
+        <!--        <Button-->
+        <!--            android:layout_width="100dp"-->
+        <!--            android:layout_height="30dp"-->
+        <!--            android:layout_marginLeft="40dp"-->
+        <!--            android:layout_marginRight="40dp"-->
+        <!--            android:background="@drawable/radius"-->
+        <!--            android:gravity="center"-->
+        <!--            android:text="국내" />-->
+        <!--        <Button-->
+        <!--            android:layout_width="100dp"-->
+        <!--            android:layout_height="30dp"-->
+        <!--            android:layout_marginRight="15dp"-->
+        <!--            android:background="@drawable/radius"-->
+        <!--            android:gravity="center"-->
+        <!--            android:text="해외" />-->
     </LinearLayout>
 
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:layout_weight="5"-->
-<!--        android:id="@+id/travel_container"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:background="#BF050F42" />-->
+    <!--    <androidx.recyclerview.widget.RecyclerView-->
+    <!--        android:layout_weight="5"-->
+    <!--        android:id="@+id/travel_container"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        android:background="#BF050F42" />-->
 
     <View
         android:layout_width="match_parent"
@@ -122,29 +125,33 @@
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#BF050F42"
-        android:orientation="horizontal">
+
+        android:orientation="horizontal"
+        >
 
         <ImageView
             android:id="@+id/home_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
-            android:src="@drawable/menu" />
+            android:src="@drawable/home"
+            android:layout_marginTop="4dp"/>
 
         <ImageView
             android:id="@+id/friends_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="120dp"
-            android:src="@drawable/menu" />
+            android:src="@drawable/chatting"
+            android:layout_marginTop="4dp"/>
 
         <ImageView
             android:id="@+id/logout_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="120dp"
-            android:src="@drawable/menu" />
+            android:src="@drawable/logout"
+            android:layout_marginTop="5dp"/>
 
     </LinearLayout>
 
