--- a/app/src/main/res/layout/activity_package_page.xml
+++ b/app/src/main/res/layout/activity_package_page.xml
@@ -7,11 +7,17 @@
     tools:context=".PackagePage"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/package_search"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/search"
+        android:layout_gravity="right"
+        />
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_weight="5"
         android:id="@+id/package_travel_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#BF050F42" />
+        android:layout_height="match_parent"
+        />
 
 </LinearLayout>
