--- a/app/src/main/res/layout/activity_find_page.xml
+++ b/app/src/main/res/layout/activity_find_page.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".LoginPage">
-
+    tools:context=".FindPage"
+    android:background="#BF050F42"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#BF050F42"
         android:orientation="horizontal">
 
         <ImageView
@@ -23,18 +22,15 @@
             android:layout_width="290dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="LOGIN"
+            android:text="비밀번호 찾기"
             android:textColor="#FFC107"
-            android:textSize="50dp"
+            android:textSize="30dp"
             android:textStyle="bold" />
 
-
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#BF050F42">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="200dp"
@@ -47,31 +43,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#BF050F42"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/log_in_email"
+            android:id="@+id/user_email_for_find"
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
-            android:hint="이메일"
+            android:hint="이메일을 입력하세요"
             android:textSize="20dp" />
 
-        <EditText
-            android:id="@+id/log_in_password"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
-            android:hint="비밀번호"
-            android:textSize="20dp"
-            android:inputType="textPassword"
-            />
-
         <Button
-            android:id="@+id/log_in_button"
+            android:id="@+id/find_button"
             android:layout_width="280dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
@@ -79,37 +63,11 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/radius"
             android:gravity="center"
-            android:text="로그인" />
+            android:text="인증번호 보내기" />
 
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#BF050F42"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/sign_up_button"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:text="회원가입"
-            android:textColor="#FFC107" />
-
-        <TextView
-            android:id="@+id/find_password"
-            android:layout_width="150dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="이메일/비밀번호 찾기"
-            android:textColor="#0E0D0D" />
-
-    </LinearLayout>
 
 
 </LinearLayout>
